--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 0;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
 }
 
 .hero {
@@ -34,4 +34,63 @@ nav ul li a {
 
 nav ul li a:hover {
     color: red;
+}
+
+.details {
+    margin: 8%;
+    margin-top: 12%;
+    width: 80%;
+}
+
+.details h1 {
+    font-style: 50();
+    color: #212121;
+    margin-bottom: 20px;
+}
+
+span {
+    color: rgb(0, 0, 0);
+}
+
+.details p {
+    font-size: 20px;
+    background: -webkit-linear-gradient(rgba(16, 154, 218, 0.911), rgb(201, 19, 218));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.details a {
+    background: #212121;
+    padding: 10px 18px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #fff;
+    display: inline-block;
+    margin: 30px 0px;
+    border-radius: 5px;
+}
+
+.images {
+    width: 45%;
+    height: 80%;
+    position: absolute;
+    bottom: 0;
+    right: 100px;
+}
+
+.shape {
+    right: 150px;
+}
+
+.images img {
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50);
+    transition: bottom 1s, left 1s;
+}
+
+.images:hover .girl {
+    left: 45%;
 }
